--- a/quote-calculator/fencing.html
+++ b/quote-calculator/fencing.html
@@ -57,7 +57,8 @@ padding: 15px;
 font-size: 18px;
 border: none;
 cursor: pointer;
-background-color: #f2f2f2;
+background-color: black;
+color: white;
 }
 
 .panel {
