--- a/quote-calculator/fencing.html
+++ b/quote-calculator/fencing.html
@@ -83,7 +83,8 @@ function closeImage(el){ el.style.display="none"; }
 <button>Closeboard Featheredge</button>
 <div class="panel">
 <h2>Closeboard Featheredge</h2>
-<p>Your description goes here.</p>
+<h3>Closeboard Featheredge Wood Fence Panels with Concrete Posts and Gravel Boards </h3>
+<p>Durable and stylish, these closeboard featheredge panels offer complete privacy and a clean, solid finish. The timber boards are tightly fitted to shed water efficiently, while robust concrete posts provide long-lasting stability. Sitting on textured rock face concrete gravel boards, the panels are protected from ground moisture and rot, making this fence a low-maintenance, long-lasting solution for any garden or boundary.</p>
 </div>
 
 <button>Double Side Hit and Miss</button>
