--- a/quote-calculator/fencing.html
+++ b/quote-calculator/fencing.html
@@ -85,6 +85,9 @@ function closeImage(el){ el.style.display="none"; }
 <h2>Closeboard Featheredge</h2>
 <h3>Closeboard Featheredge Wood Fence Panels with Concrete Posts and Gravel Boards </h3>
 <p>Durable and stylish, these closeboard featheredge panels offer complete privacy and a clean, solid finish. The timber boards are tightly fitted to shed water efficiently, while robust concrete posts provide long-lasting stability. Sitting on textured rock face concrete gravel boards, the panels are protected from ground moisture and rot, making this fence a low-maintenance, long-lasting solution for any garden or boundary.</p>
+<button class="calc-button" onclick="toggleSection('fencingSection')">View Options</button>
+<div id="fencingSection" style="display:none;">
+<div class="calculators-grid" id="fenceContainer"></div>
 </div>
 
 <button>Double Side Hit and Miss</button>
