--- a/quote-calculator/fencing.html
+++ b/quote-calculator/fencing.html
@@ -7,7 +7,7 @@
 <style>
 body { font-family: 'Montserrat', sans-serif; background: #f4f7f8; padding: 30px; margin: 0; }
 h1 { text-align: center; margin-bottom: 10px; }
-.intro 
+.intro
   { text-align: center; margin-bottom: 20px; font-size: 16px; color: #555; }
 .calc-button, .view-image-button, .quote-button, .close-button {
 cursor: pointer; border: none; border-radius: 8px; transition: 0.3s;
@@ -64,7 +64,7 @@ color: white;
 .panel {
 display: none;
 padding: 15px;
-} 
+}
 </style>
 </head>
 <body>
@@ -75,7 +75,7 @@ function toggleCalculator(id){ const el=document.getElementById(id); el.style.di
 function openImage(id){ document.getElementById(id).style.display="block"; }
 function closeImage(el){ el.style.display="none"; }
 </script>
-  
+ 
 <h1>Popular Fence Types Available</h1>
 <p>Our most popular garden fences comes with concrete posts and rock face gravels boards</p>
 <div class="accordion">
@@ -84,12 +84,7 @@ function closeImage(el){ el.style.display="none"; }
 <div class="panel">
 <h2>Closeboard Featheredge</h2>
 <h3>Closeboard Featheredge Wood Fence Panels with Concrete Posts and Gravel Boards </h3>
-<p>
-Durable and stylish, these closeboard featheredge panels offer complete privacy and a clean, solid finish.
-The timber boards are tightly fitted to shed water efficiently, while robust concrete posts provide long-lasting stability.
-Sitting on textured rock face concrete gravel boards, the panels are protected from ground moisture and rot,
-making this fence a low-maintenance, long-lasting solution for any garden or boundary.
-</p>
+<p>Durable and stylish, these closeboard featheredge panels offer complete privacy and a clean, solid finish. The timber boards are tightly fitted to shed water efficiently, while robust concrete posts provide long-lasting stability. Sitting on textured rock face concrete gravel boards, the panels are protected from ground moisture and rot, making this fence a low-maintenance, long-lasting solution for any garden or boundary.</p>
 </div>
 
 <button>Double Side Hit and Miss</button>
@@ -206,11 +201,6 @@ document.getElementById("fRes"+id).innerHTML=`
 </ul>
 <a href="tel:07735873694">Call Now</a>`;
 }
-  function openCloseboardCalculator() {
-function openFenceCalculator(id) {
-
-const fencingSection = document.getElementById("fencingSection");
-
 </script>
 <hr>
 
