--- a/quote-calculator/fencing.html
+++ b/quote-calculator/fencing.html
@@ -404,5 +404,9 @@ this.nextElementSibling.style.display = "block";
 });
 });
 </script>
+<!-- ✅ FOOTER -->
+<footer class="site-footer">
+© Home Repairs 4U | Askern DN6 | Call 07735 873694
+</footer>
 </body>
 </html>
