--- a/quote-calculator/fencing.html
+++ b/quote-calculator/fencing.html
@@ -1,5 +1,15 @@
-
+<!DOCTYPE html>
+<html lang="en-GB">
+<head>
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width,initial-scale=1" />
+<meta name="robots" content="index, follow">
+<title>Professional Guttering Services in Ackworth Doncaster | Instant Online Quote</title>
+<link rel="icon" href="/favicon.png" type="image/png">
+<link rel="canonical" href="https://homerepairs4u.com/head.html">
+<meta name="description" content="Looking for trusted guttering services in Ackworth Doncaster? From gutter clearing to repairs and replacement, get fast, reliable results. Request your instant online quote today.">
 <style>
+
 body { font-family: 'Montserrat', sans-serif; background: #f4f7f8; padding: 30px; margin: 0; }
 h1 { text-align: center; margin-bottom: 10px; }
 .intro
