--- a/quote-calculator/fencing.html
+++ b/quote-calculator/fencing.html
@@ -4,10 +4,10 @@
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <meta name="robots" content="index, follow">
-<title>Professional Guttering Services in Ackworth Doncaster | Instant Online Quote</title>
+<title>Instant Quote Calculators for Fencing, Guttering and More | Home Repairs 4U</title>
 <link rel="icon" href="/favicon.png" type="image/png">
 <link rel="canonical" href="https://homerepairs4u.com/head.html">
-<meta name="description" content="Looking for trusted guttering services in Ackworth Doncaster? From gutter clearing to repairs and replacement, get fast, reliable results. Request your instant online quote today.">
+<meta name="description" content="Use our easy online calculators to get instant quotes for fencing, guttering, pressure washing, and exterior decorating services in Doncaster. Fast, transparent pricing.">
 <style>
 /* HEADER STYLING */
 header{
