--- a/quote-calculator/fencing.html
+++ b/quote-calculator/fencing.html
@@ -6,7 +6,7 @@
 <meta name="robots" content="index, follow">
 <title>Instant Quote Calculators for Fencing, Guttering and More | Home Repairs 4U</title>
 <link rel="icon" href="/favicon.png" type="image/png">
-<link rel="canonical" href="https://homerepairs4u.com/head.html">
+<link rel="canonical" href="https://homerepairs4u.com/quote-calculator/fencing.html">
 <meta name="description" content="Use our easy online calculators to get instant quotes for fencing, guttering, pressure washing, and exterior decorating services in Doncaster. Fast, transparent pricing.">
 <style>
 /* HEADER STYLING */
