--- a/quote-calculator/fencing.html
+++ b/quote-calculator/fencing.html
@@ -158,6 +158,7 @@ function closeImage(el){ el.style.display="none"; }
 <h2>Closeboard Featheredge</h2>
 <h3>Closeboard Featheredge Wood Fence Panels with Concrete Posts and Gravel Boards </h3>
 <p>Durable and stylish, these closeboard featheredge panels offer complete privacy and a clean, solid finish. The timber boards are tightly fitted to shed water efficiently, while robust concrete posts provide long-lasting stability. Sitting on textured rock face concrete gravel boards, the panels are protected from ground moisture and rot, making this fence a low-maintenance, long-lasting solution for any garden or boundary.</p>
+<a href="https://homerepairs4u.com/quote-calculator/closeboard-featheredge.html" class="call-btn" aria-label="Get a Quote for closeboard featheredge fencing">View Fence Type</a>
 </div>
 
 <button>Double Side Hit and Miss</button>
