--- a/quote-calculator/fencing.html
+++ b/quote-calculator/fencing.html
@@ -165,6 +165,7 @@ function closeImage(el){ el.style.display="none"; }
 <div class="panel">
 <h2>Double Side Hit and Miss</h2>
 <p>Your description goes here.</p>
+<a href="https://homerepairs4u.com/quote-calculator/double-side-hit-miss-fence-panels.html" class="call-btn" aria-label="Get a Quote for double sided hit and miss fence panels.">View Fence Type</a>
 </div>
 
 <button>Double Side Concave</button>
