--- a/quote-calculator/fencing.html
+++ b/quote-calculator/fencing.html
@@ -171,6 +171,7 @@ function closeImage(el){ el.style.display="none"; }
 <div class="panel">
 <h2>Double Side Concave</h2>
 <p>Your description goes here.</p>
+<a href="https://homerepairs4u.com/quote-calculator/concave-fence-panels.html" class="call-btn" aria-label="Get a Quote for double sided concave fence panels.">View Fence Type</a>
 </div>
 
 <button>Venetian Lays Single Side</button>
