--- a/quote-calculator/fencing.html
+++ b/quote-calculator/fencing.html
@@ -174,9 +174,9 @@ function closeImage(el){ el.style.display="none"; }
 <a href="https://homerepairs4u.com/quote-calculator/concave-fence-panels.html" class="call-btn" aria-label="Get a Quote for double sided concave fence panels.">View Fence Type</a>
 </div>
 
-<button>Venetian Lays Single Side</button>
+<button>Venetian Lats Single Side</button>
 <div class="panel">
-<h2>Venetian Lays Single Side</h2>
+<h2>Venetian Lats Single Side</h2>
 <p>Your description goes here.</p>
 </div>
 
