--- a/quote-calculator/venetian-lat-fence-panels.html
+++ b/quote-calculator/venetian-lat-fence-panels.html
@@ -95,15 +95,14 @@ input, select { font-size: 16px; }
 </div>
 <br>
 <a href="tel:07735873694" class="call-btn" aria-label="Call Home Repairs 4U on 07735 873694">📞 Call Now: 07735 873694</a>
-<a href="https://homerepairs4u.com/quote-calculator/guttering.html" class="call-btn" aria-label="Get a Quote for Guttering Services">📝 Get Instant Quote</a>
 </header>
 
-<!-- VENETIAN LAYS SINGLE SIDE CALCULATOR -->
-<h1>Venetian Lays Single Side Fence Quote</h1>
+<!-- VENETIAN LATS SINGLE SIDE CALCULATOR -->
+<h1>Venetian Lats Single Side Fence Quote</h1>
 <p class="intro">Enter your fence details below to get an instant quote.</p>
 
 <div class="calc-container" style="background-image:url('/images/venetian.webp')">
-<h3>Venetian Lays Single Side</h3>
+<h3>Venetian Lats Single Side</h3>
 <button class="view-image-button" onclick="openImage('fImg1')">View Image</button>
 <div id="fImg1" class="image-modal" onclick="closeImage(this)">
 <img src="/images/venetian.webp">
