--- a/quote-calculator/fencing.html
+++ b/quote-calculator/fencing.html
@@ -178,12 +178,14 @@ function closeImage(el){ el.style.display="none"; }
 <div class="panel">
 <h2>Venetian Lats Single Side</h2>
 <p>Your description goes here.</p>
+<a href="https://homerepairs4u.com/quote-calculator/venetian-lat-fence-panels.html" class="call-btn" aria-label="Get a Quote for venetian lat fence panels.">View Fence Type</a>
 </div>
 
 <button>Single Side Hit and Miss</button>
 <div class="panel">
 <h2>Single Side Hit and Miss</h2>
 <p>Your description goes here.</p>
+<a href="https://homerepairs4u.com/quote-calculator/concave-fence-panels.html" class="call-btn" aria-label="Get a Quote for double sided concave fence panels.">View Fence Type</a>
 </div>
 
 </div>
