--- a/quote-calculator/fencing.html
+++ b/quote-calculator/fencing.html
@@ -181,11 +181,18 @@ function closeImage(el){ el.style.display="none"; }
 <a href="https://homerepairs4u.com/quote-calculator/venetian-lat-fence-panels.html" class="call-btn" aria-label="Get a Quote for venetian lat fence panels.">View Fence Type</a>
 </div>
 
+<button>Urban Hedge</button>
+<div class="panel">
+<h2>Urban Hedge</h2>
+<p>Your description goes here.</p>
+<a href="https://homerepairs4u.com/quote-calculator/urban-hedge-fence-panels.html" class="call-btn" aria-label="Get a Quote for Urban Hedge fence panels.">View Fence Type</a>
+</div>
+
 <button>Single Side Hit and Miss</button>
 <div class="panel">
 <h2>Single Side Hit and Miss</h2>
 <p>Your description goes here.</p>
-<a href="https://homerepairs4u.com/quote-calculator/concave-fence-panels.html" class="call-btn" aria-label="Get a Quote for double sided concave fence panels.">View Fence Type</a>
+<a href="https://homerepairs4u.com/quote-calculator/hit-mis-fence-panels.html" class="call-btn" aria-label="Get a Quote for hit and miss fence panels.">View Fence Type</a>
 </div>
 
 </div>
