--- a/quote-calculator/closeboard-featheredge.html
+++ b/quote-calculator/closeboard-featheredge.html
@@ -182,7 +182,7 @@ document.getElementById("fRes"+id).innerHTML=`
 <a href="tel:07735873694">Call Now</a>`;
 }
 </script>
-
+<a href="https://homerepairs4u.com/quote-calculator/urban-hedge-fence-panels.html" class="call-btn" aria-label="Get a Quote for Urban Hedge fence panels.">View Fence Type</a>
 <!-- FOOTER -->
 <footer class="site-footer">
 © Home Repairs 4U | Askern DN6 | Call 07735 873694
