--- a/quote-calculator/closeboard-featheredge.html
+++ b/quote-calculator/closeboard-featheredge.html
@@ -182,7 +182,32 @@ document.getElementById("fRes"+id).innerHTML=`
 <a href="tel:07735873694">Call Now</a>`;
 }
 </script>
-<a href="https://homerepairs4u.com/quote-calculator/urban-hedge-fence-panels.html" class="call-btn" aria-label="Get a Quote for Urban Hedge fence panels.">View Fence Type</a>
+<section style="max-width:800px;margin:50px auto;text-align:center;">
+
+<h2 style="margin-bottom:15px;">Other Fencing Options</h2>
+
+<p style="color:#555;font-size:16px;max-width:650px;margin:0 auto 30px auto;">
+If Single Side Hit & Miss isn’t quite right for your garden, we also install a range of other high-quality timber fencing styles.
+Use the links below to view each option and generate an instant quote.
+</p>
+
+<div style="display:flex;flex-wrap:wrap;gap:15px;justify-content:center;">
+
+<a href="/closeboard-featheredge-quote.html" class="call-btn">Closeboard Featheredge</a>
+
+<a href="/double-hit-miss-quote.html" class="call-btn">Double Side Hit & Miss</a>
+
+<a href="/double-concave-quote.html" class="call-btn">Double Side Concave</a>
+
+<a href="/venetian-slats-quote.html" class="call-btn">Venetian Slatted Fence</a>
+
+<a href="/urban-hedge-quote.html" class="call-btn">Urban Hedge Fence</a>
+
+<a href="/single-hit-miss-quote.html" class="call-btn">Single Side Hit & Miss</a>
+
+</div>
+
+</section>
 <!-- FOOTER -->
 <footer class="site-footer">
 © Home Repairs 4U | Askern DN6 | Call 07735 873694
