--- a/quote-calculator/closeboard-featheredge.html
+++ b/quote-calculator/closeboard-featheredge.html
@@ -193,17 +193,17 @@ Use the links below to view each option and generate an instant quote.
 
 <div style="display:flex;flex-wrap:wrap;gap:15px;justify-content:center;">
 
-<a href="/closeboard-featheredge-quote.html" class="call-btn">Closeboard Featheredge</a>
+<a href="/closeboard-featheredge.html" class="call-btn">Closeboard Featheredge</a>
 
-<a href="/double-hit-miss-quote.html" class="call-btn">Double Side Hit & Miss</a>
+<a href="/double-hit-miss.html" class="call-btn">Double Side Hit & Miss</a>
 
-<a href="/double-concave-quote.html" class="call-btn">Double Side Concave</a>
+<a href="/double-concave.html" class="call-btn">Double Side Concave</a>
 
-<a href="/venetian-slats-quote.html" class="call-btn">Venetian Slatted Fence</a>
+<a href="/venetian-slats.html" class="call-btn">Venetian Slatted Fence</a>
 
-<a href="/urban-hedge-quote.html" class="call-btn">Urban Hedge Fence</a>
+<a href="/urban-hedge.html" class="call-btn">Urban Hedge Fence</a>
 
-<a href="/single-hit-miss-quote.html" class="call-btn">Single Side Hit & Miss</a>
+<a href="/single-hit-miss.html" class="call-btn">Single Side Hit & Miss</a>
 
 </div>
 
