--- a/quote-calculator/closeboard-featheredge.html
+++ b/quote-calculator/closeboard-featheredge.html
@@ -182,6 +182,7 @@ document.getElementById("fRes"+id).innerHTML=`
 <a href="tel:07735873694">Call Now</a>`;
 }
 </script>
+  <section>
 <section style="max-width:800px;margin:50px auto;text-align:center;">
 
 <h2 style="margin-bottom:15px;">Other Fencing Options</h2>
