--- a/quote-calculator/closeboard-featheredge.html
+++ b/quote-calculator/closeboard-featheredge.html
@@ -196,15 +196,15 @@ Use the links below to view each option and generate an instant quote.
 
 <a href="/quote-calculator/closeboard-featheredge.html" class="call-btn">Closeboard Featheredge</a>
 
-<a href="/quote-calculator/double-hit-miss.html" class="call-btn">Double Side Hit & Miss</a>
+<a href="/quote-calculator/concave-fence-panels.html" class="call-btn">Concave Fence Panels</a>
 
-<a href="/quote-calculator/double-concave.html" class="call-btn">Double Side Concave</a>
+<a href="/quote-calculator/double-side-hit-miss-fence-panels.html" class="call-btn">Double Hit and Miss</a>
 
-<a href="/quote-calculator/venetian-slats.html" class="call-btn">Venetian Slatted Fence</a>
+<a href="/quote-calculator/hit-miss-fence-panels.html" class="call-btn">Single Hit and Miss</a>
 
-<a href="/quote-calculator/urban-hedge.html" class="call-btn">Urban Hedge Fence</a>
+<a href="/quote-calculator/urban-hedge.html" class="call-btn">Urban Hedge</a>
 
-<a href="/quote-calculator/single-hit-miss.html" class="call-btn">Single Side Hit & Miss</a>
+<a href="/quote-calculator/venetian-lat-fence-panels.html" class="call-btn">Venetian Lat</a>
 
 </div>
 
