--- a/quote-calculator/closeboard-featheredge.html
+++ b/quote-calculator/closeboard-featheredge.html
@@ -188,7 +188,7 @@ document.getElementById("fRes"+id).innerHTML=`
 <h2 style="margin-bottom:15px;">Other Fencing Options</h2>
 
 <p style="color:#555;font-size:16px;max-width:650px;margin:0 auto 30px auto;">
-If Single Side Hit & Miss isn’t quite right for your garden, we also install a range of other high-quality timber fencing styles.
+If Closed Featherboard Fencing isn’t quite right for your garden, we also install a range of other high-quality timber fencing styles.
 Use the links below to view each option and generate an instant quote.
 </p>
 
