--- a/quote-calculator/venetian-lat-fence-panels.html
+++ b/quote-calculator/venetian-lat-fence-panels.html
@@ -182,7 +182,31 @@ document.getElementById("fRes"+id).innerHTML=`
 <a href="tel:07735873694">Call Now</a>`;
 }
 </script>
+<section>
+<section style="max-width:800px;margin:50px auto;text-align:center;">
 
+<h2 style="margin-bottom:15px;">Other Fencing Options</h2>
+
+<p style="color:#555;font-size:16px;max-width:650px;margin:0 auto 30px auto;">
+If Venetian Lat Fencing isn’t quite right for your garden, we also install a range of other high-quality timber fencing styles.
+Use the links below to view each option and generate an instant quote.
+</p>
+
+<div style="display:flex;flex-wrap:wrap;gap:15px;justify-content:center;">
+
+<a href="/quote-calculator/closeboard-featheredge.html" class="call-btn">Closeboard Featheredge</a>
+
+<a href="/quote-calculator/concave-fence-panels.html" class="call-btn">Concave Fence Panels</a>
+
+<a href="/quote-calculator/double-side-hit-miss-fence-panels.html" class="call-btn">Double Hit and Miss</a>
+
+<a href="/quote-calculator/hit-miss-fence-panels.html" class="call-btn">Single Hit and Miss</a>
+
+<a href="/quote-calculator/urban-hedge-fence-panels.html" class="call-btn">Urban Hedge</a>
+
+</div>
+
+</section>
 <!-- FOOTER -->
 <footer class="site-footer">
 © Home Repairs 4U | Askern DN6 | Call 07735 873694
