--- a/quote-calculator/hit-miss-fence-panels.html
+++ b/quote-calculator/hit-miss-fence-panels.html
@@ -189,7 +189,7 @@ document.getElementById("fRes"+id).innerHTML=`
 <h2 style="margin-bottom:15px;">Other Fencing Options</h2>
 
 <p style="color:#555;font-size:16px;max-width:650px;margin:0 auto 30px auto;">
-If Single Side Hit and MISS Fencing isn’t quite right for your garden, we also install a range of other high-quality timber fencing styles.
+If Single Side Hit and Miss Fencing isn’t quite right for your garden, we also install a range of other high-quality timber fencing styles.
 Use the links below to view each option and generate an instant quote.
 </p>
 
