--- a/index.html
+++ b/index.html
@@ -162,36 +162,36 @@ function closeImage(el){ el.style.display="none"; }
 
 <button>Double Side Hit and Miss</button>
 <div class="panel">
-<h2>Double Side Hit and Miss</h2>
-<p>Your description goes here.</p>
+<h2>Double Side Hit & Miss Fencing with Concrete Posts & Gravel Boards</h2>
+<p>Double side hit and miss fencing is a strong, attractive, and practical choice for modern gardens. Built using high-quality timber boards fixed alternately on both sides, this style looks the same from either side while still allowing airflow — making it ideal for exposed or windy areas. Installed with durable concrete posts and rock-faced concrete gravel boards, it provides long-lasting strength, protection against rot, and a clean professional finish.</p>
 <a href="https://homerepairs4u.com/quote-calculator/double-side-hit-miss-fence-panels.html" class="call-btn" aria-label="Get a Quote for double sided hit and miss fence panels.">View Fence Type</a>
 </div>
 
 <button>Double Side Concave</button>
 <div class="panel">
-<h2>Double Side Concave</h2>
-<p>Your description goes here.</p>
+<h2>Double Sided Concave Fencing with Concrete Posts & Gravel Boards</h2>
+<p>Double sided concave fencing offers a softer, more decorative look while maintaining excellent strength and durability. The curved panel design adds visual appeal to any garden boundary, creating a more refined finish compared to standard flat panels. Fitted with solid concrete posts and rock-faced concrete gravel boards, this system protects the timber from ground moisture, reduces long-term maintenance, and delivers a sturdy, long-lasting installation suitable for both residential and shared boundaries.</p>
 <a href="https://homerepairs4u.com/quote-calculator/concave-fence-panels.html" class="call-btn" aria-label="Get a Quote for double sided concave fence panels.">View Fence Type</a>
 </div>
 
 <button>Venetian Lats Single Side</button>
 <div class="panel">
-<h2>Venetian Lats Single Side</h2>
-<p>Your description goes here.</p>
+<h2>Venetian Slatted Timber Fencing with Concrete Posts & Rock Face or Smooth Gravel Boards</h2>
+<p>Venetian slatted fencing is a modern, high-end boundary solution designed to deliver both privacy and contemporary style. The horizontal timber slats create clean architectural lines while still allowing light and airflow to pass through, making it ideal for stylish garden spaces and landscaped properties. Installed with strong concrete posts and your choice of rock-faced or smooth concrete gravel boards, this system combines sleek design with long-term structural durability and minimal maintenance.</p>
 <a href="https://homerepairs4u.com/quote-calculator/venetian-lat-fence-panels.html" class="call-btn" aria-label="Get a Quote for venetian lat fence panels.">View Fence Type</a>
 </div>
 
 <button>Urban Hedge</button>
 <div class="panel">
-<h2>Urban Hedge</h2>
-<p>Your description goes here.</p>
+<h2>Urban Hedge Timber Fencing with Concrete Posts & Rock-Faced Gravel Boards</h2>
+<p>Urban Hedge fencing combines contemporary style with durability, making it ideal for modern gardens and urban properties. The timber boards create a clean, uniform look, while the robust concrete posts and rock-faced gravel boards protect the structure from moisture and provide long-term stability. This design offers both visual appeal and practical performance, giving your boundary a polished, low-maintenance finish that lasts for years.</p>
 <a href="https://homerepairs4u.com/quote-calculator/urban-hedge-fence-panels.html" class="call-btn" aria-label="Get a Quote for Urban Hedge fence panels.">View Fence Type</a>
 </div>
 
 <button>Single Side Hit and Miss</button>
 <div class="panel">
-<h2>Single Side Hit and Miss</h2>
-<p>Your description goes here.</p>
+<h2>Single Side Hit & Miss Timber Fencing with Concrete Posts & Gravel Boards</h2>
+<p>Single side hit and miss fencing is a strong, practical solution that provides privacy while still allowing wind to pass through the structure. Timber boards are fixed alternately along one side of the frame, creating a semi-solid finish that reduces wind resistance without sacrificing strength. Installed with durable concrete posts and rock-faced or smooth concrete gravel boards, this system offers a long-lasting boundary that protects the timber from ground contact and ensures a solid, low-maintenance installation.</p>
 <a href="https://homerepairs4u.com/quote-calculator/hit-miss-fence-panels.html" class="call-btn" aria-label="Get a Quote for hit and miss fence panels.">View Fence Type</a>
 </div>
 
