--- a/index.html
+++ b/index.html
@@ -140,7 +140,10 @@ style="font-size:20px; color:#000; text-decoration:none; font-weight:600;">Home<
 
 <a href="tel:07735873694" class="call-btn" aria-label="Call Home Repairs 4U on 07735 873694">📞 Call Now: 07735 873694</a>
 </header>
-
+<h1>Instant Online Quote Calculators</h1>
+<p class="intro">
+Use our easy-to-use calculators to get instant quotes for fencing, guttering, pressure washing, and exterior decorating services. Enter your project details and receive a fast, transparent estimate, helping you plan and budget your home improvements with confidence.
+</p>
 <script>
 function toggleSection(id){ const el=document.getElementById(id); el.style.display=el.style.display==="block"?"none":"block"; }
 function toggleCalculator(id){ const el=document.getElementById(id); el.style.display=el.style.display==="block"?"none":"block"; }
