--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@ function openImage(id){ document.getElementById(id).style.display="block"; }
 function closeImage(el){ el.style.display="none"; }
 </script>
  
-<h1>Popular Fence Types Available</h1>
+<h1>Instant Fence Quotes</h1>
 <p>Our most popular garden fences comes with concrete posts and rock face gravels boards</p>
 <div class="accordion">
 
@@ -201,7 +201,7 @@ function closeImage(el){ el.style.display="none"; }
 </div>
 
 <!-- ================= FENCING ================= -->
-<h2>Fencing Quote Calculator</h2>
+<h2>All Fence Quote Options</h2>
 <p class="intro">Click below to view fencing options.</p>
 <p class="intro">
 Use this calculator to get an instant fencing estimate. Enter your total fence length,
